big change user control

--- a/assets/css/beforPrint.css
+++ b/assets/css/beforPrint.css
@@ -1,5 +1,6 @@
 :root{
-    --table--header--bg--color: #f78a3d;
+    --table--header--bg--color: blueviolet;
+    --report--header--bg--color: blueviolet;
 }
 
 
@@ -11,6 +12,7 @@ body {
     flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
+    /* background-color: #000; */
 }
 
 .container{
@@ -20,14 +22,18 @@ body {
 table {
     border-collapse: collapse;
     width: 100%;
+    /* background-color: #191C24; */
+    box-shadow: 0 0 10px 0 rgba(209, 209, 209, 0.316);
+
 }
 
 thead tr {
-    background-color: #f78a3d !important;
+    background-color: var(--table--header--bg--color) !important;
+    color: #fff;
 }
 tr th,
 tr td {
-    padding: 15px;
+    padding: 14px;
     text-align: left;
     /* border: 1px solid #ddd; */
 }
@@ -36,14 +42,20 @@ tr td {
 .row:nth-of-type(odd){
     background-color: #ddd;
 }
+/* .row:nth-of-type(even){
+    color: #ddd;
+} */
 
 .report-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #ddd;
+    background-color: var(--report--header--bg--color);
+    color: #fff;
     width: 100%;
-    margin:  20px auto;
+    margin:  15px auto 0 auto;
+    padding: 10px 0;
+    border-bottom: 1px solid #ddd;
 }
 
 .logo img {
@@ -82,7 +94,6 @@ tr td {
     justify-content: end;
     align-items: center;
     height: 55px;
-    gap: 10px;
 }
 
 .print-controller i{
@@ -104,7 +115,12 @@ tr td {
     size: landscape;
 }
 @media print{
-    
+    .report-container{
+        background-color: blueviolet;
+        color: #fff;
+        -webkit-print-color-adjust: exact;
+
+    }
     body{
         font-size: 12px;
     }
