--- a/assets/css/beforPrint.css
+++ b/assets/css/beforPrint.css
@@ -5,10 +5,7 @@
 
 
 body {
-    width: 100%;
-    margin: auto;
-    height: 100vh;
-    overflow: scroll;
+ 
     flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
@@ -16,7 +13,7 @@ body {
 }
 
 .container{
-    width: 70%;
+    width: 85%;
     margin: auto;
 }
 table {
@@ -36,6 +33,7 @@ tr td {
     padding: 14px;
     text-align: left;
     /* border: 1px solid #ddd; */
+    white-space: nowrap;
 }
 
 
