--- a/assets/css/beforPrint.css
+++ b/assets/css/beforPrint.css
@@ -116,6 +116,25 @@ tr td {
     background-color: #f78a3d;
     color: #181818;
 }
+.card-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+.card{
+    margin: 10px 0;
+    padding: 15px 10px;
+    box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    background-color: #f78a3d;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+.count-dep{
+    font-size: 22px;
+    margin-bottom: 10px;
+}
 @page{
     size: landscape;
 }
